frontend/src/components/UrlForm.css
a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #fff;
}

button {
  border-radius: 8px;
  color: #000;
  border: 2px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  transition: border-color 0.25s;
  background-color: #e2e2e2;
  border-radius: 10px !important;
  margin: 0.5rem !important;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}
label {
  font-size: 1.2rem;
  color: #000;
  background-color: #f6f6f6;
  margin: 0.5rem !important;
}
input {
  border-radius: 10px;
  border: 2px solid #fff;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #f6f6f6;
  cursor: pointer;
  transition: border-color 0.25s;
  border-color: #646cff;
  margin: 0.5rem !important;
  color: #000;
}
input:focus {
  border-color: 4px #fff;
}

.form {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #f6f6f6;
  padding: 40px;
  border-radius: 20px;
  flex-wrap: wrap;
  margin: 30px;
  /* width: 80%; */
}

@media only screen and (max-width: 992px) {
  .form {
    flex-direction: column;
  }
}

